Fix issue with missing kill events. Correct overlay alignment issue

--- a/kill-feed/v1/overlay.css
+++ b/kill-feed/v1/overlay.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     margin: 5px;
-    align-items: flex-end;
+    align-items: {{alignment}};
 }
 
 span {
